# reinforcement-learning

./: pyproject.toml
notebooks/: 2.3_testbed.ipynb  2.6_optimistic_initial_values.ipynb  2.7_ucb_action_selection.ipynb  2.8_gradient_bandit.ipynb
solutions/: 2.5_exercise.ipynb
src/reinforcement_learning/: action.py  action_selection.py  agent.py
tests/: test_action.py  test_action_selection.py  test_agent.py
